# CoHAN-Nav2

./: ReadME.md  compile.sh  install-deps.sh
src/agent_path_prediction/: package.xml
src/agent_path_prediction/include/agent_path_prediction/: agent_path_prediction.hpp
src/agent_path_prediction/msg/: HumanInfo.msg
src/agent_path_prediction/src/: agent_path_prediction.cpp
src/cohan2.0_navigation/cohan_sim_navigation/config/: cohan2_params_pr2.yaml  custom_navigate_to_pose.xml
src/cohan2.0_navigation/cohan_sim_navigation/launch/: agent_tracking_launch.py  bringup_launch.py  navigation_launch.py  planners_launch.py  pr2_description_launch.py
src/cohan2.0_navigation/cohan_sim_navigation/maps/: laas.yaml
src/cohan2.0_navigation/cohan_sim_navigation/rviz/: cohan.rviz
src/cohan2.0_navigation/simulators/cohan_sim/include/cohan_sim/: sim.hpp
src/cohan2.0_navigation/simulators/cohan_sim/src/: sim.cpp  simros.cpp
src/cohan_layers/include/cohan_layers/: agent_layer_config.hpp
src/cohan_layers/src/: agent_layer.cpp  static_agent_layer.cpp
src/cohan_msgs/: package.xml
src/cohan_nav2_behaviours/: backoff.cpp
src/cohan_tutorial/: package.xml
src/evasion_planner/: CMakeLists.txt  evasion_planner_plugin.xml  package.xml
src/evasion_planner/include/evasion_planner/: evasion_planner.hpp
src/evasion_planner/src/: evasion_planner.cpp
src/hateb_local_planner/: CMakeLists.txt  hateb_local_planner_plugin.xml  package.xml  plugin.xml
src/hateb_local_planner/behavior_trees/: all_modes.xml  all_modes_bt4.6.xml  all_modes_no_recovery.xml
src/hateb_local_planner/include/hateb_local_planner/: backoff.h  hateb_config.hpp  hateb_goal_checker.hpp  hateb_local_planner_ros.h  mode_switch.h  smac_multi_planner.hpp  visualization.hpp
src/hateb_local_planner/include/hateb_local_planner/behavior_tree/: bt_core.h
src/hateb_local_planner/include/hateb_local_planner/behavior_tree/condition/: backoff_exit_condition.h  evade_condition.h  vel_obs_exit_condition.h
src/hateb_local_planner/include/hateb_local_planner/g2o_types/: edge_velocity.h
src/hateb_local_planner/src/: agents_class.cpp  hateb_config.cpp  hateb_goal_checker.cpp  hateb_local_planner_ros.cpp  mode_switch.cpp  smac_multi_planner.cpp  visualization.cpp
src/hateb_local_planner/src/behavior_tree/action/: set_mode.cpp
src/hateb_local_planner/src/behavior_tree/condition/: backoff_exit_condition.cpp  dual_band_exit_condition.cpp  evade_condition.cpp  is_goal_updated.cpp  vel_obs_exit_condition.cpp
src/homotopy_planner/: CMakeLists.txt  homotopy_planner_plugin.xml  package.xml
src/homotopy_planner/include/homotopy_planner/: bernstein.hpp  homotopy_planner.hpp
src/homotopy_planner/src/: homotopy_planner.cpp
src/invisible_humans_detection/include/invisible_humans_detection/: invisible_humans_detection.hpp
src/invisible_humans_detection/src/: invisible_humans_detection.cpp
