<?xml version="1.0"?>
<package format="3">
  <name>cohan_tutorial</name>
  <version>0.0.1</version>
  <description>configuration and launch files for cohan_tutorial</description>

  <maintainer email="ptsingaman@laas.fr">Phani Teja Singamaneni</maintainer>

  <author email="ptsingaman@laas.fr">Phani Teja Singamaneni</author>

  <license>MIT</license>

 <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>

  <!-- ROS1 dependencies -->
  <depend>rclpy</depend>

  <!-- Python dependencies -->
  <depend>python3-yaml</depend>

   <test_depend>ament_cmake_gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>                               
   <build_type>ament_cmake</build_type> 
  </export> 

</package>
