<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hateb_local_planner</name>
  <version>0.1.0</version>
  <description>
    The hateb_local_planner package implements a plugin to the base_local_planner of the 2D navigation stack.
    It implements a human-robot multi-context and multi-agent cooperative navigation planner that predicts trajectories for human/agents and plans accordingly
    a trajectory for robot that satisfies certain kinodynamic and social constraints.
  </description>

  <maintainer email="ptsingaman@laas.fr">Phani Teja Singamaneni</maintainer>

  <author email="ptsingaman@laas.fr">Phani Teja Singamaneni</author>
  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>

  <license>BSD</license>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>costmap_converter</depend>
  <depend>costmap_converter_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>libg2o</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cohan_msgs</depend>
  <depend>agent_path_prediction</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>ros2_helpers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Main Nav2 Dependencies -->
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/hateb_local_planner_plugin.xml"/>
  </export>
</package>
